--- a/projectMobile_Desktop/css/style.css
+++ b/projectMobile_Desktop/css/style.css
@@ -1,3 +1,61 @@
+@import url("https://fonts.googleapis.com/css?family=Raleway:300,400,700&display=swap");
+/* Resetting the default styling of the browser. */
+* {
+  margin: 0;
+  padding: 0;
+  text-decoration: 0;
+  list-style: none;
+  border: 0;
+  outline: 0;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+}
 
+header {
+  width: 100%;
+  height: 150px;
+  display: flex;
+  justify-content: space-between;
+}
+
+header .image1 {
+  padding: 25px;
+  border: 0;
+  margin: 25px;
+  align-items: flex-start;
+}
+header nav {
+  display: flex;
+}
+header nav .image2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+header nav ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  text-align: center;
+  border-radius: 10px;
+}
+header nav ul li:hover {
+  background-color: #000000;
+}
+header nav ul li:hover a {
+  color: #ffffff;
+}
+header nav ul li {
+  padding: 10px;
+  border: 0;
+  margin: 5px;
+  border-radius: 10px;
+}
+header nav ul li a {
+  color: #000000;
+}
+header nav ul li a:hover {
+  color: #ffffff;
+}
 
 /*# sourceMappingURL=style.css.map */
