--- a/projectMobile_Desktop/css/style.scss
+++ b/projectMobile_Desktop/css/style.scss
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway:300,400,700&display=swap');
 //Variable
 $colorYellow: #ffBA60;
 $colorBlack: #000000;
+$colorWhite: #ffffff;
 
 
 //Function(mixin)
@@ -10,13 +12,74 @@ $colorBlack: #000000;
     align-items: center;
 }
 
+@mixin contentSize ($w,$h){
+    width: $w;
+    height: $h;
+}
+
+@mixin contentBorder ($p, $b, $m){
+    padding: $p;
+    border: $b;
+    margin: $m;
+    
+}
+
 /* Resetting the default styling of the browser. */
 * {
-    padding: 0;
     margin: 0;
+    padding: 0;
     text-decoration: 0;
     list-style: none;
     border: 0;
     outline: 0;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  }
+
+header {
+    @include contentSize(100%, 150px);
+    display: flex;
+    justify-content: space-between;    
+
 }
+
+header {
+    .image1 {
+        @include contentBorder(25px, 0, 25px);
+        align-items: flex-start;
+    }
+
+    nav {
+        display: flex;
+    }
+
+    nav  .image2 {
+        @include contentCenter();
+    }
+
+    nav ul {
+        @include contentCenter();
+        font-size: 18px;
+        text-align: center;
+        border-radius: 10px;
+        li:hover{
+            background-color: #000000;
+       
+            a {
+                color: $colorWhite;
+            }
+        }
+
+        li {
+            @include contentBorder(10px ,0 ,5px);
+            border-radius: 10px;
+
+            a {
+                color: #000000;
+            }
+            a:hover{
+                color: $colorWhite;
+            }
+        }
+    }
+}
+
