--- a/projectMobile_Desktop/css/style.css
+++ b/projectMobile_Desktop/css/style.css
@@ -75,6 +75,7 @@
     justify-content: center;
   }
   main .section__main1 .btn__all .btn__1 {
+    cursor: pointer;
     font-size: 14px;
     border-radius: 10px;
     align-items: center;
@@ -90,6 +91,7 @@
     height: 32px;
   }
   main .section__main1 .btn__all .btn__2 {
+    cursor: pointer;
     font-size: 14px;
     border-radius: 10px;
     align-items: center;
@@ -112,8 +114,17 @@
     width: 600px;
     height: 600px;
   }
+  main .section__main1 .network__Social ul {
+    position: relative;
+    top: 450px;
+    left: 265px;
+  }
+  main .section__main1 .network__Social ul li {
+    margin: 20px 10px 20px 0;
+  }
   h1 {
     text-align: center;
+    margin: 100px;
   }
   main .section__main2 {
     display: flex;
@@ -145,6 +156,7 @@
     margin: 10px 20px 10px 20px;
   }
   main .section__main2 .side__img .btn__3 {
+    cursor: pointer;
     font-size: 14px;
     border-radius: 10px;
     align-items: center;
@@ -160,13 +172,15 @@
     height: 32px;
   }
   .image__pianoBrown img {
-    background-image: none;
     width: 650px;
     height: 600px;
   }
   main .section__main3 {
     display: flex;
     flex-direction: column;
+    padding: 20px;
+    border: 0;
+    margin: 200px;
   }
   main .section__main3 .pianos__3 ul {
     display: flex;
@@ -174,12 +188,66 @@
     align-items: center;
     justify-content: space-around;
   }
+  main .section__main3 .box {
+    padding: 20px;
+    border: 0;
+    margin: 20px;
+    width: 100x;
+    height: 250px;
+    border-radius: 8px;
+    font-size: 12px;
+    box-shadow: 0px 28px 64px 12px rgba(0, 0, 0, 0.12);
+  }
+  main .section__main3 .box .image__piano {
+    padding: 10px;
+    border: 0;
+    margin: 10px;
+    position: relative;
+    top: -145px;
+  }
+  main .section__main3 .box .content {
+    display: flex;
+    position: relative;
+    top: -115px;
+    right: 10px;
+    flex-direction: column;
+  }
+  main .section__main3 .box .content h2 {
+    margin: 15px;
+  }
+  main .section__main3 .box .content .precio {
+    display: flex;
+    flex-direction: row;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  main .section__main3 .box ul li {
+    list-style: circle;
+  }
+  main .section__main3 .box div .precio p {
+    padding: 10px;
+    border: 1px solid #000000;
+    margin: 25px;
+    width: 115px;
+    height: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+  }
+  main .section__main3 .box div .precio a {
+    background: #000000;
+    padding: 10px;
+    border-radius: 8px;
+  }
   main .section__main3 .btn__foot {
     display: flex;
     justify-content: center;
     align-items: center;
   }
   main .section__main3 .btn__foot .btn__4 {
+    cursor: pointer;
     font-size: 14px;
     border-radius: 10px;
     align-items: center;
